# vAttention

./: README.md
csrc/: CMakeLists.txt  README.md
csrc/benchmark/: CMakeLists.txt  attention_demo.cpp
csrc/core/: x-attention.h
csrc/vAttention/: CMakeLists.txt  attention.cpp  attention.h  kernel.cpp  kernel.h  vattn.cpp  vattn.h
csrc/vAttention/common/: vattn_assert.h  vattn_exception.cpp  vattn_exception.h
csrc/vAttention/kvcache/: kvcache.cpp  kvcache.h
csrc/vAttention/kvcache/index/: cache_index.cpp  cache_index.h  cache_index_fast_scan_pq.cpp  cache_index_fast_scan_pq.h  cache_index_flat.cpp  cache_index_flat.h  clustering.cpp  clustering.h  fast_scan_product_quantizer.cpp  fast_scan_product_quantizer.h  metric_type.cpp  metric_type.h  product_quantizer.cpp  product_quantizer.h  quantizer.h  vector_type.h
csrc/vAttention/utils/: aligned_table.h  file.cpp  file.h  heap.h  neighbor.h  random.cpp  random.h  timer.cpp  timer.h  util.h
