CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

INCLUDE_DIRECTORIES(${VATTENTION_INCLUDE} 
                    ${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE VATTENTION_SOURCES *.cpp *.h *.c *.cu *.cuh)

ADD_LIBRARY(VATTENTION-SHARED SHARED ${VATTENTION_SOURCES})
SET_TARGET_PROPERTIES(VATTENTION-SHARED PROPERTIES OUTPUT_NAME "vAttention")
SET(VATTENTION_SHARED VATTENTION-SHARED)
SET(VATTENTION_SHARED_LIBRARIES ${KVATTENTION_SHARED} CACHE INTERNAL "vAttention shared lib")

ADD_LIBRARY(VATTENTION-STATIC STATIC ${VATTENTION_SOURCES})
SET_TARGET_PROPERTIES(VATTENTION-STATIC PROPERTIES OUTPUT_NAME "vAttention")
SET(VATTENTION_STATIC VATTENTION-STATIC)
SET(VATTENTION_STATIC_LIBRARIES ${VATTENTION_STATIC} CACHE INTERNAL "vAttention static lib")